<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="pref_notesFolder">Notes folderId</string>
    <string name="pref_notesFolder_default">/mnt/sdcard/notes/</string>
    <string name="filter_button">Filter</string>
    <string name="notes_list_activity">List Notes</string>
    <string name="note_view_activity">Note View</string>
    <string name="no_more_rows">No more rows available</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search notes</string>
    <string name="search_notes_activity">Search Notes</string>
    <string name="new_folder">New Folder</string>
    <string name="change_folder">Change Folder</string>
    <string name="moved_to">Moved to &lt;i>%1$s&lt;/i></string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="create_new_folder">Create new folder</string>
    <string name="folder_name">folder name</string>
    <string name="delete">Delete</string>
    <string name="created_folder">Create folder &lt;i>%1$s&lt;/i></string>
    <string name="delete_folder">Delete folder &lt;i>%1$s&lt;/i>?</string>
    <string name="delete_note">Delete note &lt;i>%1$s&lt;/i>?</string>
    <string name="sync_service_description">Synchronize the notes</string>

    <!-- preferences -->
    <string name="pref_dropboxUser">Dropbox user</string>

    <!-- Dropbox settings. This is the tomboy-notes Dropbox app. -->
    <string name="dropbox_app_key">17zzlf216nsykj9</string>

    <string name="dropbox_login">Dropbox login</string>
    <string name="dropbox_logout">Dropbox logout</string>
    <string name="dropbox_user">pref_dropboxUser</string>
    <string name="not_logged_in">Not logged in</string>
    <string name="dropbox_sync">Dropbox Sync</string>
</resources>
