<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Notes">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_dropbox_sync"
        android:title="@string/dropbox_sync"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_dropbox_login"
        android:title="@string/dropbox_login"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_dropbox_logout"
        android:title="@string/dropbox_logout"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/abc_ic_search"
        android:showAsAction="ifRoom|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />

</menu>
